<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    tools:context=".activity.MainActivity"
    android:id="@+id/mainBackground">
    <RelativeLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imageSearch"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_search_24"
            app:tint="@color/colorSearchIcon" />


        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_toStartOf="@+id/imageOption"
            android:layout_toEndOf="@id/imageSearch"
            android:background="@null"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/search_note"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/imageOption"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu"
            app:tint="@color/colorSearchIcon" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="6dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="192dp"
        tools:listitem="@layout/listview_item_main" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/empty_list"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_add_24"
        app:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>