<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorNote"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.NoteDetail">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">
            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/colorIcons"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imageDelete"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_delete_24"
                app:layout_constraintEnd_toStartOf="@+id/imageSave"
                app:layout_constraintStart_toEndOf="@+id/imageBack"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcons" />

            <View
                android:id="@+id/viewSelectionColor"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/background_color_selected"
                app:layout_constraintEnd_toStartOf="@+id/imageSave"
                app:layout_constraintStart_toEndOf="@+id/imageDelete"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"/>


            <ImageView
                android:id="@+id/imageSave"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_save_24"
                app:tint="@color/colorIcons"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp"
            android:clipToPadding="false"
            android:paddingBottom="10dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">
                <EditText
                    android:id="@+id/inputNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/background_edittext"
                    android:fontFamily="@font/ubuntu_bold"
                    android:hint="@string/note_title"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:padding="10dp"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/textDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:gravity="end|center_vertical"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorIcons"
                    android:textSize="13sp"
                    android:hint="@string/date_and_time"
                    android:textColorHint="@color/colorTextHint"
                    app:layout_constraintEnd_toEndOf="@id/inputNoteTitle"
                    app:layout_constraintStart_toStartOf="@id/inputNoteTitle"
                    app:layout_constraintTop_toBottomOf="@id/inputNoteTitle"/>
                <EditText
                    android:id="@+id/inputNoteContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="15dp"
                    android:padding="10dp"
                    android:background="@drawable/background_edittext"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="top"
                    android:hint="@string/input_text_here"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:minHeight="200dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textDateTime"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
    <include layout="@layout/layout_select_color"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
